--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/komfort_dim?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = root
+spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net:3306/heroku_925a66408b21b09
+spring.datasource.username = b772cc46f45e5a
+spring.datasource.password = b98d3d89
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
