--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.dim</groupId>
     <artifactId>komfort</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>komfort</name>
     <description>Komfort Dim Server</description>
 
